--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@phosphor-icons/react": "^2.0.15",
     "cookies-next": "^4.1.0",
     "dotenv": "^16.3.1",
+    "firebase": "^10.8.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
