--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "dotenv": "^16.3.1",
     "firebase": "^10.8.0",
     "next": "14.0.4",
+    "nextjs-toploader": "^1.6.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
