--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "zustand": "^4.5.1"
   },
   "devDependencies": {
+    "@types/react": "^18.2.57",
     "autoprefixer": "^10.0.1",
     "daisyui": "^4.4.23",
     "eslint": "^8",
