--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@phosphor-icons/react": "^2.0.15",
     "cookies-next": "^4.1.0",
     "dotenv": "^16.3.1",
@@ -16,6 +17,7 @@
     "next": "14.0.4",
     "nextjs-toploader": "^1.6.6",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "zustand": "^4.5.1"
   },
