--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_BASE_URL_API_ADMIN = https://rinjani-visitor-api-cybrddhtca-et.a.run.app/api/admin
+NEXT_PUBLIC_BASE_URL_API_ADMIN = https://rinjani-visitor-api.onrender.com/api/admin
